# flyte-eval

./: README.md
attempt_03/: README.md
attempt_03/src/python/: Dockerfile.foo1  Dockerfile.foo2  Dockerfile.foo3  README.md  error.txt
attempt_03/src/python/flyte_science/: make_envs.py  pyproject.toml
attempt_03/src/python/flyte_science/flyte_science/: __init__.py
attempt_03/src/python/flyte_science/flyte_science/workflow1/: README.md  pyproject.toml
attempt_03/src/python/flyte_science/flyte_science/workflow2/: pyproject.toml
attempt_03/src/python/flyte_science/flyte_science/workflow3/: pyproject.toml
attempt_03/src/python/flyte_science/scripts/: one_off_combo_script.py
attempt_03/src/python/flytekit-docker/: README.md  setup.py
attempt_03/src/python/flytekit-docker/flytekitplugins/docker/: __init__.py  image_builder.py
attempt_03/src/python/foo_v1/: pyproject.toml
attempt_03/src/python/foo_v1/foo/: __init__.py
attempt_03/src/python/foo_v2/: pyproject.toml
attempt_03/src/python/foo_v2/foo/: __init__.py
attempt_03/src/python/foo_v3/: pyproject.toml
attempt_03/src/python/foo_v3/foo/: __init__.py
flyte-test-bio-01/src/python/flyte_diffuse_design_fold/: README.md  pyproject.toml
flyte-test-bio-01/src/python/flyte_diffuse_design_fold/docker/: Dockerfile.esmfold  Dockerfile.proteinmpnn
flyte-test-bio-01/src/python/flyte_diffuse_design_fold/flyte_diffuse_design_fold/: foldingdiff_wf.py  master.py  rf_workflow.py
flyte-test-bio-01/src/python/flyte_rf/: setup_demo_cluster.sh
flyte-test-bio-01/src/python/flyte_rf/docker/: Dockerfile.biopython  Dockerfile.foldingdiff  Dockerfile.rfdiffusion
flyte-test-bio-01/src/python/flyte_rf/flyte_diffuse_design_fold/: esmfold_workflow.py  master.py  mpnn_workflow.py
