[project]
name = "flyte_science"
description="Master flyte library holding all workflows, it should import the workflows only"
requires-python = ">=3.8"
authors = [{name = "Danny Farrell", email = "danpf@uw.edu"}]
version = "1.0.0"
dependencies = [
  "flytekit",
  "flytekitplugins-deck-standard",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
