[project]
name = "workflow_3_lib"
description="Workflow library compatible with foo==3.0.0"
requires-python = ">=3.8"
authors = [{name = "Danny Farrell", email = "danpf@uw.edu"}]
dependencies = [
  "Foo==3.0.0",
  "flytekit",
  "flytekitplugins-deck-standard",
]
version = "1.0.0"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
